--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Foody-Resto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Dokdo|Lobster|Fredoka+One|Patrick+Hand" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Lobster+Two|Cookie|Dokdo|Lobster|Fredoka+One|Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
   integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-  <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css"/>
   </head>
  
 <body>
    <!-----Header---->
    <div id="logo">
-      <a href="#">Foody Resto</a>
+      <a href="#">Golden Resto</a>
   </div>
    <nav>
       <ul>
@@ -29,8 +29,8 @@
      </ul>
        
     </nav>
-    <div id="side-menu-div"><i class="fas fa-bars"> </i>
-       
+    <div id="side-menu-div">
+       <i class="fas fa-bars"> </i>
       <ul>
           <li class="close"><i class="far fa-times-circle"></i></li>
           <li><a href="#">Home</a></li>
