added responsive design

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link rel="stylesheet" type="text/css" media="screen" href="./css/styles.css"/>
-  </head>
+</head>
  
 <body>
-   <!---------------------------Header------------------------------------->
+   <!-----Header------->
    <div id="logo">
       <a href="#">Golden Resto</a>
   </div>
-   <!---------------------------NAVBAR------------------------------------->
+   <!-------NAVBAR------->
    <nav>
       <ul>
          <li><a href="#">Home</a></li>
@@ -41,12 +41,12 @@
        </ul>
     </div>
 
-   <!----------------------------SHOWCASE------------------------------------->
+   <!-----SHOWCASE--------->
     <section id="showcase">
       <h1> " WE SERVE FOOD WITH LOVE "</h1>
     </section>
 
-    <!----------------------------ABOUT------------------------------------->
+    <!------ABOUT------->
     <section id="about">
       <h3>About us </h3>
       <p>"FoodyResto specializes in the freshest fish and seafood prepared with
@@ -60,7 +60,7 @@
                         if you were dining by the sea with its glowing blue and white décor."
   </section>
 
-  <!---------------------------MENU------------------------------------->
+  <!----MENU---->
    <section id="menu">
       <h3>Menu</h3>
     <div class="grid-container">
